--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
